# self_explore_robot_simulation

./: README.md
src/: house_map.pgm  house_map.yaml
src/bopt_box_filter/: CMakeLists.txt  package.xml
src/bopt_box_filter/config/: box_filter.yaml
src/bopt_box_filter/include/bopt_box_filter/: box.hpp  box_filter.hpp  box_filter_node.hpp  transform2d.hpp
src/bopt_box_filter/launch/: box_filter.launch.py
src/bopt_box_filter/src/: box_filter.cpp  box_filter_node.cpp  main.cpp
src/rrt_planner/: package.xml  setup.cfg  setup.py
src/rrt_planner/launch/: rrt_demo.launch.py
src/rrt_planner/rrt_planner/: rrt.py  rrt_planner_node.py
src/rrt_planner/rviz/: rrt.rviz
src/semantic_msgs/: CMakeLists.txt  package.xml
src/semantic_msgs/srv/: QueryLocation.srv
src/semantic_nav/: package.xml  setup.cfg  setup.py
src/semantic_nav/config/: labels.yaml  regions.yaml
src/semantic_nav/launch/: auto_explore_semantic.launch.py  semantic.launch.py  semantic_web.launch.py
src/semantic_nav/semantic_nav/: clip_vlm.py  depth_utils.py  embedding.py  mock_vlm.py  query_and_go.py  semantic_map.py  semantic_query.py  semantic_tagger.py  store.py  web_backend.py
src/semantic_nav/web/: index.html
src/turtlebot3_explorer/: package.xml  setup.cfg  setup.py
src/turtlebot3_explorer/launch/: explore.launch.py  explorer_only.launch.py
src/turtlebot3_explorer/turtlebot3_explorer/: explorer_node.py
src/turtlebot3_house_sim/: package.xml  setup.cfg  setup.py
src/turtlebot3_house_sim/config/: nav2_params.yaml  slam.yaml
src/turtlebot3_house_sim/launch/: house_sim.launch.py  localize.launch.py
src/turtlebot3_house_sim/worlds/: house.world
